fixes to the css of thetable that was causing missalignment of the line and also wrapping the first two columns

--- a/static/CSS/adminViewMoods.css
+++ b/static/CSS/adminViewMoods.css
@@ -6,12 +6,19 @@
 .emoji {
     font-size: 40px;
     text-align: center;
+    margin: 0;
+    padding: 0;
+    align-items: center;
 }
 .form-text {
     font-size: larger;
+    display: flex;
+    float: left;
+    margin: 0;
+    align-items: center;
 }
-#adminQuizMoods {
-    /* text-align: center;
+/* #adminQuizMoods {
+    text-align: center;
     vertical-align: middle;
     justify-content: center;
     margin: auto;
@@ -22,10 +29,14 @@
 th {
     text-align: center;
     width: 25%;
+    display: flex;
+    white-space: nowrap;
+    align-items: center;
 }
 td {
     text-align: center;
     display: flex;
     width: 25%;
     float:inline-start;
+    align-items: center;
 }
